{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 2338,
  "lineage": "a4e48146-ecf0-d000-2016-f311de17f451",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055e1a45bf4556b43",
            "arn": "arn:aws:ec2:us-east-1:992382750911:elastic-ip/eipalloc-055e1a45bf4556b43",
            "association_id": "eipassoc-04a4082aecfb7aaa5",
            "domain": "vpc",
            "id": "eipalloc-055e1a45bf4556b43",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06acac521c8716197",
            "private_dns": "ip-10-100-3-217.ec2.internal",
            "private_ip": "10.100.3.217",
            "public_dns": "ec2-44-218-5-146.compute-1.amazonaws.com",
            "public_ip": "44.218.5.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:992382750911:instance/i-0356c80a2b5f9a091",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0356c80a2b5f9a091",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046f050bb16327c28",
            "private_dns": "ip-10-100-3-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.3.123",
            "public_dns": "ec2-18-206-93-193.compute-1.amazonaws.com",
            "public_ip": "18.206.93.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-017fd23de480de823",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b94bb115901a4ccf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093ed3ba7ceff2295",
            "tags": {
              "Name": "bastiona 0"
            },
            "tags_all": {
              "Name": "bastiona 0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b94bb115901a4ccf"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.ALB-SG",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:992382750911:instance/i-068eaaf4f6a4ac2b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068eaaf4f6a4ac2b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ff7a679a03c2ef9",
            "private_dns": "ip-10-100-4-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.4.31",
            "public_dns": "ec2-3-84-101-254.compute-1.amazonaws.com",
            "public_ip": "3.84.101.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09187ccee546ca582",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b94bb115901a4ccf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057775cb1203bf86b",
            "tags": {
              "Name": "bastiona 1"
            },
            "tags_all": {
              "Name": "bastiona 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b94bb115901a4ccf"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.ALB-SG",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:992382750911:instance/i-0dfb12367b1425468",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfb12367b1425468",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093140c1305465963",
            "private_dns": "ip-10-100-0-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.0.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0edc5cb9700aa7c74",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-051fff087f4205e88"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf65bfb317e997e0",
            "tags": {
              "Name": "Backend_VM - 0 "
            },
            "tags_all": {
              "Name": "Backend_VM - 0 "
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051fff087f4205e88"
            ]
          },
          "dependencies": [
            "aws_security_group.ALB-SG",
            "aws_security_group.ALB_TO_Backend_VM",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:992382750911:instance/i-001005edeab441ec5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001005edeab441ec5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047bcabdb401cefab",
            "private_dns": "ip-10-100-0-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.0.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c261c586c688555e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-051fff087f4205e88"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf65bfb317e997e0",
            "tags": {
              "Name": "Backend_VM - 1 "
            },
            "tags_all": {
              "Name": "Backend_VM - 1 "
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051fff087f4205e88"
            ]
          },
          "dependencies": [
            "aws_security_group.ALB-SG",
            "aws_security_group.ALB_TO_Backend_VM",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:992382750911:instance/i-03e1249974d11cf89",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e1249974d11cf89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5801ada106e1bac",
            "private_dns": "ip-10-100-0-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.0.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05e9d954c5299cdec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-051fff087f4205e88"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf65bfb317e997e0",
            "tags": {
              "Name": "Backend_VM - 2 "
            },
            "tags_all": {
              "Name": "Backend_VM - 2 "
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051fff087f4205e88"
            ]
          },
          "dependencies": [
            "aws_security_group.ALB-SG",
            "aws_security_group.ALB_TO_Backend_VM",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:internet-gateway/igw-06721b952cb3aba49",
            "id": "igw-06721b952cb3aba49",
            "owner_id": "992382750911",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:loadbalancer/app/ExternalALB/4daf59cb3827eeb4",
            "arn_suffix": "app/ExternalALB/4daf59cb3827eeb4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ExternalALB-1229588648.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382750911:loadbalancer/app/ExternalALB/4daf59cb3827eeb4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ExternalALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b94bb115901a4ccf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057775cb1203bf86b"
              },
              {
                "subnet_id": "subnet-093ed3ba7ceff2295"
              }
            ],
            "subnets": [
              "subnet-057775cb1203bf86b",
              "subnet-093ed3ba7ceff2295"
            ],
            "vpc_id": "vpc-07919f306f6975b6b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ALB-SG",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:listener/app/ExternalALB/4daf59cb3827eeb4/530d7fe5b368d96d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382750911:listener/app/ExternalALB/4daf59cb3827eeb4/530d7fe5b368d96d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:loadbalancer/app/ExternalALB/4daf59cb3827eeb4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external_ALB",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.ALB-SG",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_listener_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:listener-rule/app/ExternalALB/4daf59cb3827eeb4/530d7fe5b368d96d/ea1c1b53252fc0f2",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ExternalALB.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382750911:listener-rule/app/ExternalALB/4daf59cb3827eeb4/530d7fe5b368d96d/ea1c1b53252fc0f2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:listener/app/ExternalALB/4daf59cb3827eeb4/530d7fe5b368d96d",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external_ALB",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.ALB-SG",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e",
            "arn_suffix": "targetgroup/alb-tg/acfdc37f6705916e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:992382750911:loadbalancer/app/ExternalALB/4daf59cb3827eeb4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_target_group_attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e-20240623090713525800000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e",
            "target_id": "i-0dfb12367b1425468"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.ALB-SG",
            "aws_security_group.ALB_TO_Backend_VM",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e-20240623090713570000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e",
            "target_id": "i-001005edeab441ec5"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.ALB-SG",
            "aws_security_group.ALB_TO_Backend_VM",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e-20240623090713463700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382750911:targetgroup/alb-tg/acfdc37f6705916e",
            "target_id": "i-03e1249974d11cf89"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.ALB-SG",
            "aws_security_group.ALB_TO_Backend_VM",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055e1a45bf4556b43",
            "association_id": "eipassoc-04a4082aecfb7aaa5",
            "connectivity_type": "public",
            "id": "nat-08d9a46013515c4cb",
            "network_interface_id": "eni-06acac521c8716197",
            "private_ip": "10.100.3.217",
            "public_ip": "44.218.5.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-093ed3ba7ceff2295",
            "tags": {
              "Name": "nat_gateway 01"
            },
            "tags_all": {
              "Name": "nat_gateway 01"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:route-table/rtb-06690fe71c6c4dac5",
            "id": "rtb-06690fe71c6c4dac5",
            "owner_id": "992382750911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d9a46013515c4cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-database_subnet"
            },
            "tags_all": {
              "Name": "rt-database_subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:route-table/rtb-06e84be0bf556e2e2",
            "id": "rtb-06e84be0bf556e2e2",
            "owner_id": "992382750911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d9a46013515c4cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-database_subnet"
            },
            "tags_all": {
              "Name": "rt-database_subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:route-table/rtb-00ec0cc3742c32dc4",
            "id": "rtb-00ec0cc3742c32dc4",
            "owner_id": "992382750911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d9a46013515c4cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private_subnet"
            },
            "tags_all": {
              "Name": "rt-private_subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:route-table/rtb-08fbbdc9426941639",
            "id": "rtb-08fbbdc9426941639",
            "owner_id": "992382750911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06721b952cb3aba49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public_subnet ,"
            },
            "tags_all": {
              "Name": "rt-public_subnet ,"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:route-table/rtb-037569ac149f6d6f4",
            "id": "rtb-037569ac149f6d6f4",
            "owner_id": "992382750911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06721b952cb3aba49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public_subnet ,"
            },
            "tags_all": {
              "Name": "rt-public_subnet ,"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_database_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022e3dbdec01a7fb0",
            "route_table_id": "rtb-06690fe71c6c4dac5",
            "subnet_id": "subnet-0f616b612b784e32a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.rt_database_subnet",
            "aws_subnet.database_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072dcfe321ffdf4a3",
            "route_table_id": "rtb-06e84be0bf556e2e2",
            "subnet_id": "subnet-078c86b57e4fbc2b4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.rt_database_subnet",
            "aws_subnet.database_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9f6c492ccaf3c2f",
            "route_table_id": "rtb-00ec0cc3742c32dc4",
            "subnet_id": "subnet-0cf65bfb317e997e0"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.rt_private_subnet",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0743070b0814c47fd",
            "route_table_id": "rtb-08fbbdc9426941639",
            "subnet_id": "subnet-093ed3ba7ceff2295"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public_subnet",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c07d81dbfbc586d5",
            "route_table_id": "rtb-037569ac149f6d6f4",
            "subnet_id": "subnet-057775cb1203bf86b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public_subnet",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:security-group/sg-0b94bb115901a4ccf",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b94bb115901a4ccf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "992382750911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_TO_Backend_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:security-group/sg-051fff087f4205e88",
            "description": "ALB_TO_Backend_VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051fff087f4205e88",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b94bb115901a4ccf"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b94bb115901a4ccf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB_TO_Backend_VM",
            "name_prefix": "",
            "owner_id": "992382750911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-TO-Backend-SG"
            },
            "tags_all": {
              "Name": "ALB-TO-Backend-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB-SG",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer_TO_RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:security-group/sg-02219a2d1f690658b",
            "description": "ALB_TO_Backend_VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02219a2d1f690658b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051fff087f4205e88"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240623075744200000000003",
            "name_prefix": "terraform-",
            "owner_id": "992382750911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver_To_RDS"
            },
            "tags_all": {
              "Name": "Webserver_To_RDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ALB-SG",
            "aws_security_group.ALB_TO_Backend_VM",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-0f616b612b784e32a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f616b612b784e32a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database_subnet  01"
            },
            "tags_all": {
              "Name": "database_subnet  01"
            },
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-078c86b57e4fbc2b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078c86b57e4fbc2b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database_subnet  02"
            },
            "tags_all": {
              "Name": "database_subnet  02"
            },
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-0cf65bfb317e997e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf65bfb317e997e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet  01"
            },
            "tags_all": {
              "Name": "private_subnet  01"
            },
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-093ed3ba7ceff2295",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093ed3ba7ceff2295",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet  01"
            },
            "tags_all": {
              "Name": "public_subnet  01"
            },
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-057775cb1203bf86b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057775cb1203bf86b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet  02"
            },
            "tags_all": {
              "Name": "public_subnet  02"
            },
            "vpc_id": "vpc-07919f306f6975b6b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.with"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:vpc/vpc-07919f306f6975b6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0742a951c4aa9ae67",
            "default_route_table_id": "rtb-067d217817ec81041",
            "default_security_group_id": "sg-06f6df8cf0ac83ba8",
            "dhcp_options_id": "dopt-0f7b6b6048cac8286",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07919f306f6975b6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067d217817ec81041",
            "owner_id": "992382750911",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}